Add fchat secret + conversation cache + prod logs

--- a/CozeFptWebhook/appsettings.json
+++ b/CozeFptWebhook/appsettings.json
@@ -8,5 +8,9 @@
   },
   "Fpt": {
     "WebhookSecret": "change-me-super-secret"
-  }
+  },
+    "Security": {
+      "FChatApiKey": "remember_me"
+    }
+
 }
